--- a/ml/0_basic_markov_process.ipynb
+++ b/ml/0_basic_markov_process.ipynb
@@ -22,9 +22,7 @@
     "\n",
     "---\n",
     "\n",
-    "Many machine learning algorithms take the the assumption that the data points are independent and identically distributed.\n",
-    "\n",
-    "This is a reasonable assumption if we try to classify images that were reassembled by crawling the internet. But some sequence of data points are not independent are in fact highly correlated:\n",
+    "Many machine learning algorithms take the the assumption that the data points are independent and identically distributed. This is a reasonable assumption if we try to classify images that were reassembled by crawling the internet, but some sequence of data points are not independent are in fact highly correlated:\n",
     "\n",
     "* the successive images in a movies (should you see a cat, seeing a cat at the next frame is very likely)\n",
     "* the sequence of positions in a game such as Chess (the board will overall be similar)\n",
@@ -47,7 +45,7 @@
     "# Markov Processes\n",
     "---\n",
     "\n",
-    "Assuming that a data point $x_n$ depends on the values $x_1 \\dots x_n$ that preceeds it leads to two problems. The first one is that the distribution is of a different shape at each new points (more and more parameters), the second one is that the distribution complexity grows exponentially. Markov processes are one way to solve this problem.\n",
+    "Assuming that a data point $x_n$ depends on the values $x_1 \\dots x_{n-1}$ that preceeds it leads to two problems. The first one is that the distribution is of a different shape at each new points (more and more parameters), the second one is that the distribution complexity grows exponentially. Markov processes are one way to solve this problem.\n",
     "\n",
     "<br>\n",
     "\n",
@@ -59,7 +57,7 @@
     "\n",
     "A markov process is a **stationary process** if the probability $p(x_n|x_{n-1} \\dots x_{n-k})$ remains constant over time (it only depends on the values and not on the specific $n$). This occurs when the data generative process that creates the data, the distribution of the data, stays the same over time.\n",
     "\n",
-    "An order-1 homogeneous markov process is usually what we talk about when mentioning markov processes: the point $x_n$ only depend on the value of the previous point $x_{n-1}$ and stays the same over time. For discrete finite random variables, such processes can be encoded by a **transition matrix**.\n",
+    "An order-1 stationary markov process is usually what we talk about when mentioning markov processes: the point $x_n$ only depend on the value of the previous point $x_{n-1}$ and stays the same over time. For discrete finite random variables, such processes can be encoded by a **transition matrix**.\n",
     "\n",
     "<br>\n",
     "\n",
@@ -429,9 +427,9 @@
     "\n",
     "### Why Markov?\n",
     "\n",
-    "The transition distribution $p(s_{n+1}|s_n, a_n)$ represents the **model of the world** (how does the world react based on actions). The policy $p(a_n|s_n)$ represents our agent and how it selects its actions. We can combine both in a joint distribution:\n",
+    "The transition distribution $p(s_{n+1}|s_n, a_n)$ represents the **model of the world** (how does the world react based on actions). The policy $\\pi(a_n|s_n)$ represents our agent and how it selects its actions. We can combine both in a joint distribution:\n",
     "\n",
-    "&emsp; $p(a_{n+1}|s_{n+1}) \\, p(s_{n+1}|s_n, a_n) = p(a_{n+1},s_{n+1}|s_n, a_n)$\n",
+    "&emsp; $\\pi(a_{n+1}|s_{n+1}) \\, p(s_{n+1}|s_n, a_n) = p(a_{n+1},s_{n+1}|s_n, a_n)$\n",
     "\n",
     "This forms an order 1 Markov Chain of pairs of state and actions."
    ]
@@ -444,17 +442,17 @@
     "\n",
     "### Maximizing long term reward\n",
     "\n",
-    "The goal of the policy is to maximize with respect to the the policy the reward over time, the **state value** $\\mathbb{V}[s_n]$, the total reward from state $s_n$ to the end of the **episode**.\n",
+    "The goal of the policy is to maximize with respect to the the policy the reward over time, the **state value** $\\mathbb{V}[s_n]$, the expected cumulative reward from state $s_n$ to the end of the **episode**.\n",
     "\n",
-    "&emsp; $\\displaystyle \\mathbb{V}[s_n] = \\sum_{a_n} p(a_n|s_n) \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\, \\big( r_n + \\mathbb{V}[s_{n+1}] \\big)$\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[s_n] = \\sum_{a_n} \\pi(a_n|s_n) \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\, \\big( r_n + \\mathbb{V}[s_{n+1}] \\big)$\n",
     "\n",
-    "Alternatively, we can maximize the **action-value** $\\mathbb{Q}[s_n, a_n]$, the total reword from state $s_n$ if we perform the action $a_n$:\n",
+    "Alternatively, we can maximize the **action-value** $\\mathbb{Q}[s_n, a_n]$, the expected cumulative reward from state $s_n$ when we perform the action $a_n$:\n",
     "\n",
-    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] = \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\, \\big( r_n + \\sum_{a_{n+1}} p(a_{n+1}|s_{n+1}) \\, \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
+    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] = \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\, \\big( r_n + \\sum_{a_{n+1}} \\pi(a_{n+1}|s_{n+1}) \\, \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
     "\n",
     "The action value and state value are linked together:\n",
     "\n",
-    "&emsp; $\\displaystyle \\mathbb{V}[s_n] = \\sum_{a_n} p(a_n|s_n) \\, \\mathbb{Q}[s_n, a_n] = \\mathbb{E}_{a \\sim p(a)}[\\mathbb{Q}[s_n, a_n]]$\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[s_n] = \\sum_{a_n} p(a_n|s_n) \\, \\mathbb{Q}[s_n, a_n] = \\mathbb{E}_{a \\sim \\pi(a)}[\\mathbb{Q}[s_n, a_n]]$\n",
     "\n",
     "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] = \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\big( r_n + \\mathbb{V}[s_{n+1}] \\big) = \\mathbb{E}_{r,s \\sim p(s,a)}[r_n + \\mathbb{V}[s_{n+1}]]$\n",
     "\n",
@@ -492,7 +490,9 @@
     "\n",
     "### Unknown world models\n",
     "\n",
-    "When the world model $p(r_n, s_{n+1}|s_n,a_n)$ is not known, as it is the case in most situations, the Bellman update above cannot be performed. Instead, we have to interact with the world to get the transitions and rewards. Since the state transitions are likely to be non-deterministic, the Bellman update needs to be a moving average:\n",
+    "When the world model $p(r_n, s_{n+1}|s_n,a_n)$ is not known, as it is the case in most situations, the Bellman update above cannot be performed. Instead, we have to interact with the world to get the transitions and rewards.\n",
+    "\n",
+    "Since the state transitions are likely to be non-deterministic, the Bellman update needs to be a moving average (we basically sample the world model):\n",
     "\n",
     "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] \\leftarrow \\alpha \\, \\mathbb{Q}[s_n, a_n] + (1 - \\alpha) \\big( r_n + \\gamma \\underset{a_{n+1}}{\\operatorname{max}} \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
     "&emsp; which has the form of a gradient ascent\n",
@@ -506,7 +506,7 @@
     "\n",
     "The off-policy and on-policy methods leads to different Bellman updates:\n",
     "\n",
-    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] \\leftarrow \\alpha \\, \\mathbb{Q}[s_n, a_n] + (1 - \\alpha) \\big( r_n + \\gamma \\sum_{a_{n+1}} p(a_{n+1}|s_{n+1}) \\, \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
+    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] \\leftarrow \\alpha \\, \\mathbb{Q}[s_n, a_n] + (1 - \\alpha) \\big( r_n + \\gamma \\sum_{a_{n+1}} \\pi(a_{n+1}|s_{n+1}) \\, \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
     "&emsp; (on-policy: SARSA)\n",
     "\n",
     "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] \\leftarrow \\alpha \\, \\mathbb{Q}[s_n, a_n] + (1 - \\alpha) \\big( r_n + \\gamma \\underset{a_{n+1}}{\\operatorname{max}} \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
@@ -614,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
