basic game theory

--- a/ml/0_basic_game_theory_2.ipynb
+++ b/ml/0_basic_game_theory_2.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "### Definition\n",
     "\n",
-    "A game of *N* player is composed for the following:\n",
+    "A game of *N* player is composed of the following:\n",
     "\n",
     "* A set of actions $\\{A\\}_n$ for each of the *N* players\n",
     "* A set of types $\\{\\Theta\\}_n$ for each of the *N* players\n",
@@ -344,6 +344,121 @@
     "</table>\n",
     "\n",
     "The result would also have to take into account for the other to back down below the threshold, that is with probability T-1, and the probability of fighting back 2-T."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Mechanism design\n",
+    "---\n",
+    "\n",
+    "Reverse game theory: we want to build a game so that the players that will participate in it will go to a chosen outcome.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Motivation\n",
+    "\n",
+    "We have a set of possible outcomes *X* and a group of player, each with its type $\\theta_i$ and preferences regarding these possible outcomes. The utility of each player for the outcome *x* is $u_i(x, \\theta_i)$.\n",
+    "\n",
+    "We call **decision rule** $x(\\theta)$ the outcome the game designer desires. This outcome generally depends on the types of all the players. The goal of the game designer is to design a game in which this decision rule is among the Bayesian Nash equilibrium of the game, or even better, a dominant strategy of this game.\n",
+    "\n",
+    "To do so, the game designer can design a game in which the payoff of the outcome is modifed by a **transfer rule** $m_i(\\theta)$ which assigns for each player a positive or negative transfer of value, resulting in the payoff:\n",
+    "\n",
+    "&emsp; $v_i(x, \\theta_i) = u_i(x, \\theta_i) + m_i(x, \\theta_i)$\n",
+    "&emsp; such that\n",
+    "&emsp; $\\sum_i m_i(x, \\theta) \\le 0$\n",
+    "\n",
+    "These transfers represent transfer of values between players (for instance money, that comes in the form of taxes or state aides) such that the balance stays positive (the game designer can keep part of the surplus, this allows to design some games such as auctions).\n",
+    "\n",
+    "These transfers are meant to **incentivise to do the right thing by aligning the personnal incentives with the social incentives**: when player aim at maximizing their own payoff, they naturally aim at implementing the decision rule desired by the mechanism designer.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Definition: Mechanism\n",
+    "\n",
+    "The combination of a decision rule $x(\\theta)$ with the transfers rule $m_i(\\theta)$ is called a **choice rule**. The game designer choses this choice rule to push the players toward the desired decision rule.\n",
+    "\n",
+    "&emsp; $f(\\theta) = (x(\\theta), m_1(\\theta) \\dots m_N(\\theta)) : \\Theta \\longmapsto Y$\n",
+    "\n",
+    "A mechanism $\\Gamma$ is a collection of *N* actions sets (one for each player) together with an outcome function *g* that maps from the strategy to an outcome and a set of transfers:\n",
+    "\n",
+    "&emsp; $\\Gamma = \\langle A_i, g \\rangle$\n",
+    "&emsp; where\n",
+    "&emsp; $g: S_1 \\times \\dots \\times S_N \\longmapsto Y$\n",
+    "\n",
+    "A mechanism $\\Gamma$ **implements the choice rule** $f(\\theta)$ if there is a Bayesian Nash equilibrium $(s_1(\\theta_1), \\dots s_N(\\theta_N))$ such that the outcome of these strategies is equal to the choice rule for all possible values of $\\theta$:\n",
+    "\n",
+    "&emsp; $g(s_1(\\theta_1), \\dots s_N(\\theta_N)) = f(\\theta)$\n",
+    "\n",
+    "What matters for the game designer is to **find such a choice rule (design the mechanism) so that the decision rule** desired by the game designer is part of a Bayesian Nash equilibrium.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Relevation principle\n",
+    "\n",
+    "In an equilibrium, the player knows that the mechanism implements a choice rule *f* and choose to stick to it because they know that it is in their own advantages (thanks to the transfer rule that **align the personnal incentives with the social incentives**). For them, it is equivalent to tell their types and let the mechanism designer implement the choice rule direction. \n",
+    "\n",
+    "The revelation principle says that if a decision rule can be implemented by the mechanism designer using some mechanism, it can be implemented by a **direct revelation game** in which all players anounce their true type and the mechanism designer uses his decision rule.\n",
+    "\n",
+    "This revelation game should incentivise the players to give their true type in their own benefit. If such a game cannot implement the decision rule desired by the game designer, then no other mechanism can.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Dominant strategy equilibrium\n",
+    "\n",
+    "If a mechanism implements a choice rule, it means there is a Bayesian Nash Equilibrium whose outcome for all types of players matches the decision rule. If the player belives the other player will play this Nash equilibrium, they have no incentives to derive from it.\n",
+    "\n",
+    "A **dominant strategy equilibrium** is a stronger version of the Nash equilibrium because it relieves the players to form beliefs about opponent, nor about their types and their distribution: such an equilibrium is the best response to any strategy that any opponent could form.\n",
+    "\n",
+    "We say that a **choice rule is implementable in dominant strategies** if the outcomes decided by the decision rule correspond to the outcomes of the dominant strategy equilibrium.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Pareto optimality\n",
+    "\n",
+    "We say that a decision rule *x* is pareto optimal if it maximises the sum of the utility of each player for each possible combination of types $\\theta$ of the players:\n",
+    "\n",
+    "&emsp; $\\displaystyle x(\\theta) \\in \\underset{x \\in X}{\\operatorname{argmax}} \\sum_i u_i(x, \\theta_i)$\n",
+    "\n",
+    "We can make sure that the Pareto optimal is also the dominant strategy equilibrium by designing a transfer value mechanism such that the loss in utility of a player by moving from strategy *s* of the Pareto optimal to strategy *s'* are more than compensated by the tranfers: this is always possible because by definition the sum of utility of *s* is higher than the one of *s'*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### VCG Mechanism for Pareto optimality\n",
+    "\n",
+    "* pivotal mechanism\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Example of the two brothers\n",
+    "\n",
+    "Two brothers wants to travel abroad. There are three possible touristic destinations (A, B and C) and each brother has his preferences on the destination:\n",
+    "\n",
+    "* Brother 1 (type $\\theta_1$) prefers A (3) to B (2) to C (1)\n",
+    "* Brother 2 (type $\\theta_2'$) prefers C (3) to B (2) to A (1)\n",
+    "* Brother 2 (type $\\theta_2''$) prefers B (3) to A (2) to C (1)\n",
+    "\n",
+    "The parents wants to implement the following decision rule:\n",
+    "\n",
+    "&emsp; $f(\\theta_1, \\theta_2') = B$\n",
+    "&emsp; and\n",
+    "&emsp; $f(\\theta_1, \\theta_2'') = A$\n",
+    "\n",
+    "For that to work, the parents must manage brother 2 to anounce his real type, but brother 2 will not always give his real type because if he is of type $\\theta_2''$, it is in his best interest to lie, so that the destination is B. To incentivise him to do the right thing, we can use the **pivotal mechanism** to add the following transfer rules:\n",
+    "\n",
+    "&emsp; $m_2(\\theta_2') = 2 - 3 = -1$ (inclusion of brother 2 would change the outcome of brother 1 to worse alternative)\n",
+    "\n",
+    "&emsp; $m_2(\\theta_2'') = 3 - 3 = 0$ (inclusion of brother 2 would not change the outcome of brother 1)\n",
+    "\n",
+    "With that, brother 2 has no interest in lying to be $\\theta_2'$ because the added utility is compensated by the transfer in the other direction."
    ]
   },
   {
