--- a/ml/0_basic_control.ipynb
+++ b/ml/0_basic_control.ipynb
@@ -8,7 +8,24 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import gym"
+    "import gym\n",
+    "import math \n",
+    "import matplotplit.pyplot as plt \n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torch.utils.data as data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# LQR\n",
+    "---"
    ]
   },
   {
@@ -317,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
