--- a/ml/7_neural_networks_loss_functions.ipynb
+++ b/ml/7_neural_networks_loss_functions.ipynb
@@ -135,20 +135,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<br>\n",
     "\n",
-    "# Hinge loss\n",
-    "---"
+    "# Contrastive Loss\n",
+    "---\n",
+    "\n",
+    "The contrastive loss is used a lot in Self Supervised Learning for images and videos. To make a model invariant to rotations, crops, noise, color jittering and such, a model is trained to recognize that two random augmentations of the same images are identical.\n",
+    "\n",
+    "The notion of identical is typically measured by the **cosine similarity** between the representation of the two augmentations of the image.\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathcal{S}(x_i, x_j) = \\frac{x_i . x_j}{\\Vert x_i \\Vert \\Vert x_j \\Vert}$ (but any form of similarity function $\\mathcal{S}$ can do)\n",
+    "\n",
+    "The problem with training a neural network to do so, is that a trivial solution is to assign all images to the same representation (constant function) so that indeed, all augmentations are perfectly recognized. The idea of contrastive learning is to avoid those trivial solution by also making sure that two related images have different representations.\n",
+    "\n",
+    "The network is therefore trained to increase the similary between the representation of two random augmentations of the same image, and to decrease this similarity between two random augmentations of two different images. To do so, we deal with images the same way as we would do with words in a sentence:\n",
+    "\n",
+    "* each image is thought as having its own label\n",
+    "* we try to \"classify\" correctly the representations\n",
+    "\n",
+    "We therefore use a modified softmax function (good for classifying) together with the similarity function we talked about before, giving the loss between a **positive pair** (two representations $x_i$ and $x_j$ of two augmentations of the same image):\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathcal{L}(i,j) = \\frac{\\exp \\mathcal{S}(x_i, x_j)}{\\sum_{k \\ne i} \\exp \\mathcal{S}(x_i, x_k)}$ (classify the $x_j$ as the sole matching element)\n",
+    "\n",
+    "We usually add an hyper parameter named the **temperature** $\\tau$ to get the full formula:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathcal{L}(i,j) = \\frac{\\exp \\big( \\mathcal{S}(x_i, x_j) / \\tau \\big)}{\\sum_{k \\ne i} \\exp \\big( \\mathcal{S}(x_i, x_k) / \\tau \\big)}$\n",
+    "\n",
+    "The parameter $\\tau$ controls how much the similarity is enforced to be strong between positive pairs, for we have: $\\exp \\big( s / \\tau \\big) = \\sqrt[\\tau] \\exp s$\n",
+    "\n",
+    "Note: for reference, check SimCLR: https://arxiv.org/pdf/2002.05709.pdf\n"
    ]
   },
   {
@@ -157,7 +175,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Contrastive Loss\n",
+    "# Hinge loss\n",
     "---"
    ]
   },
