more details about cross entropy loss

--- a/ml/7_neural_networks_loss_functions.ipynb
+++ b/ml/7_neural_networks_loss_functions.ipynb
@@ -68,6 +68,8 @@
     "# Cross Entropy Loss\n",
     "---\n",
     "\n",
+    "### Motivation and definition\n",
+    "\n",
     "In classification problems, the goal is to maximize the joint probability of guessing the right class for a list of samples $(x_i, y_i)$. Maximizing this probability, assuming i.i.d. samples, takes the form of maximizing the product:\n",
     "\n",
     "&emsp; $\\displaystyle P = \\prod_i p(y_i|x_i) \\implies \\log P = \\sum_i \\log p(y_i|x_i)$\n",
@@ -76,18 +78,34 @@
     "\n",
     "&emsp; $\\displaystyle \\mathcal{L} = - \\sum_i \\log p(y_i|x_i)$\n",
     "\n",
+    "### Origin of the name\n",
+    "\n",
+    "In information theory, the entropy is defined as $\\mathbb{E}_{p(X)}[- \\log p(X)]$, the conditional entropy is defined as $\\mathbb{E}_{p(X,Y)}[- \\log p(X|Y)]$, and the cross entropy is defined as $\\mathbb{E}_{q(X)}[- \\log p(X)]$.\n",
+    "\n",
+    "This is almost what is being done here: we sample according to an unknown distribution (the data generating process) and compute the negative log of the probabilitly of the data. And so we compute a kind of conditional cross entropy:\n",
+    "\n",
+    "&emsp; $\\mathcal{L} = \\mathbb{E}_{q(x,y)}[- \\log p(y|x)]$\n",
+    "\n",
+    "Why do we try to minimize this cross-entropy? We can decompose the cross entropy in two parts by virtue of the properties of the log:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathcal{L} = \\mathbb{E}_{q(x,y)}[- \\log q(y|x)] + \\mathbb{E}_{q(x,y)} \\big[\\log \\frac{q(y|x) q(x)}{p(y|x) q(x)} \\big]$\n",
+    "\n",
+    "The second term is called the **KL divergence** of the distribution $p(y|x)q(x)$ with respect to the distribution $q(x,y)$. It is always positive and is minimized if $p$ is equal to $q$. So by minimizing the negative log likelihood (the cross entropy), we try to match the original distribution of the data, which is the goal of the classification task.\n",
+    "\n",
+    "### In Pytorch\n",
+    "\n",
     "Since in most networks, the outputs of the network are not bounded, we generally apply a **softmax** function to transform the **logits** of each class to probabilities:\n",
     "\n",
     "&emsp; $\\displaystyle p(y_i|x_i) = \\frac{\\exp(l_i)}{\\sum_j \\exp(l_j)}$ where $l_i$ is the logit output for class *i*\n",
     "\n",
     "This softmax function correspond to the assumption that the classes are linearly separable in their final representation (the previous layers of the network create this representation) which itself correspond to the assumption that the N classes are centered around N point, following a gaussian process centered on that point, with the same variance for all classes.\n",
     "\n",
-    "The *CrossEntropyLoss* class of Pytorch combines both the application of Softmax and the Negative Log Likelihood in one class (but is more stable numerically):"
+    "The *CrossEntropyLoss* class of Pytorch combines both the application of Softmax, followed by the logarithm and then the Negative Log Likelihood in one class (but is more stable numerically):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -95,16 +113,6 @@
      "output_type": "stream",
      "text": [
       "tensor(1.6094)\n",
-      "tensor([[0.2000, 0.2000, 0.2000, 0.2000, 0.2000],\n",
-      "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000],\n",
-      "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000],\n",
-      "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000],\n",
-      "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000],\n",
-      "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000],\n",
-      "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000],\n",
-      "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000],\n",
-      "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000],\n",
-      "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000]])\n",
       "tensor(1.6094)\n",
       "tensor(1.6094)\n"
      ]
@@ -123,7 +131,7 @@
     "\n",
     "softmax = nn.Softmax(dim=-1)\n",
     "probs = softmax(logits)\n",
-    "print(probs) # each class has same probability by construction here\n",
+    "# print(probs) # each class has same probability by construction here\n",
     "nnl = nn.NLLLoss()\n",
     "print(nnl(torch.log(probs), target))\n",
     "\n",
@@ -184,7 +192,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# https://pytorch.org/docs/master/generated/torch.nn.HingeEmbeddingLoss.html?highlight=hinge"
+   ]
   }
  ],
  "metadata": {
